--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="produtos">
 
         <div class="produto">
-            <img src="./img/fone bluetooth.avif" alt="">
+            <img src="https://th.bing.com/th/id/OIP.yNUmhTa4BTAkQ8qeSk5kdAHaLP?w=129&h=196&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="">
             <h3>Fone Bluetooth Pro X7</h3>
             <p>R$ 149,90</p>
             <button class="btn">Comprar</button>
@@ -79,6 +79,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
